# homefox-hmd

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h  hmd_flags.h
application/src/: main.c
drivers/components/inc/: button.h  ens160_driver_flags.h  ens16x_driver_flags.h  ens21x_driver_flags.h  fxls89xxxx_configuration.h  fxls89xxxx_driver_flags.h  led.h  sensors_hw.h  sht3x_driver_flags.h  sx126x_driver_flags.h
drivers/components/src/: button.c  ens160_hw.c  ens16x_hw.c  ens21x_hw.c  fxls89xxxx_configuration.c  led.c  sensors_hw.c  sht3x_hw.c  sx126x_hw.c
drivers/device/inc/: stm32l0xx_device_flags.h  types.h
drivers/peripherals/inc/: i2c_address.h  mcu_mapping.h  nvic_priority.h  nvm_address.h  stm32l0xx_drivers_flags.h
drivers/peripherals/src/: mcu_mapping.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h  terminal_instance.h
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/cli/inc/: cli.h
middleware/cli/src/: cli.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
middleware/sigfox/inc/: rfe.h  sigfox_ep_flags.h  sigfox_ep_frames.h
middleware/sigfox/src/: rf_api.c  rfe.c
script/: git_version.sh  hmd_hw1-0.jlink  hmd_hw1-0_debug.launch  hmd_hw1-0_run.launch  hmd_hw2-0.jlink  hmd_hw2-0_debug.launch  hmd_hw2-0_run.launch  hmd_nucleo-l053r8.jlink  hmd_nucleo-l053r8_run.launch
